# julhaas91-boilerplate-cloud-run-litestar-uv-python

./: CHANGELOG.md  Dockerfile  README.md  Taskfile.sh  config.env  pyproject.toml  setup_gcp.sh
.github/workflows/: deployment.yml  release.yml  validation.yml
src/: main.py
