[project]
name = "boilerplate-cloud-run-litestar-uv-python"
version = "0.1.0"
description = "This boilerplate simplifies the deployment of microservices (e.g., APIs) to Cloud Run."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docker>=7.1.0",
    "gcloud>=0.18.3",
    "litestar[standard]>=2.12.1",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "toml>=0.10.2",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
assets = []
build_command_env = []
commit_message = "chore(release): {version}"
commit_parser = "angular"
logging_use_named_masks = true
major_on_zero = false
allow_zero_version = true
no_git_verify = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = ""
exclude_commit_patterns = []
mode = "init"
insertion_flag = "<!-- version list -->"
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "github-actions <actions@github.com>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
